opam-version: "2.0"
synopsis: "Dead values/types, exception, and termination analysis for OCaml/Reason"
description: """
Experimental analyses for OCaml/Reason: for globally dead values/types, exception analysis, and termination analysis.
"""
maintainer: ["Cristiano Calcagno"]
authors: ["Cristiano Calcagno"]
license: "MIT"
homepage: "https://github.com/reason-association/reanalyze"
bug-reports: "https://github.com/reason-association/reanalyze/issues"
depends: [
  "dune" {>= "1.7"}
  "ocaml" {>= "4.06.1" & < "4.13"}
  "reason" {>= "3.6.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/reason-association/reanalyze.git"
