opam-version: "2.0"
synopsis: "Dead values/types, exception, and termination analysis for OCaml/ReScript"
description: """
Experimental analyses for ReScript/OCaml/Reason: for globally dead values/types, exception analysis, and termination analysis.
"""
maintainer: ["Cristiano Calcagno"]
authors: ["Cristiano Calcagno"]
license: "MIT"
homepage: "https://github.com/rescript-association/reanalyze"
bug-reports: "https://github.com/rescript-association/reanalyze/issues"
depends: [
  "dune" {>= "1.7"}
  "ocaml" {>= "4.06.1" & < "4.14"}
  "cppo" {build}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/rescript-association/reanalyze.git"
